#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([fbgrab.c])
AM_INIT_AUTOMAKE([fbgrab], [1.0], [])
AC_CONFIG_HEADERS([config.h])
AC_PREREQ([2.65])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL

# Checks for libraries.
PKG_CHECK_MODULES([PNG], [libpng])

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h sys/ioctl.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
